improve blog structrue and add a blog about how to input Chinese in sublime

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,11 @@
+# Site Setting
+title: TimoTokki
+description:
+  This is a demo
+owner: TimoTokki
 baseurl: /timotokki.github.io
+social:
+  github: https://github.com/TimoTokki
+
+# Build settings
+markdown: kramdown
