--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: TimoTokki
 description:
   This is a demo
 owner: TimoTokki
-baseurl: /timotokki.github.io
+# baseurl: /timotokki.github.io
 social:
   github: https://github.com/TimoTokki
 
