delete '/' at the end of url in _config.yml file. do some changes to posts. add function backToTop() to 'default' layout

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ header-img: img/home-bg-art.jpg
 email: 190377641@qq.com
 description: "关于前端与设计 | 阿伟，Web & Mobile Lover，Front-End Engineer，student | 这里是 @阿伟 的个人博客，与你一起发现更大的世界。"
 keyword: "阿伟, Timo阿伟, TimoTokki, Timo, @TimoTokki, @Timo, 阿伟的博客, TimoTokki Blog, 博客, 个人网站, 互联网, 前端"
-url: "http://timotokki.github.io/"              # your host, for absolute URL
+url: "http://timotokki.github.io"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 
